fix overflow scroll

--- a/utility/style.css
+++ b/utility/style.css
@@ -6,7 +6,7 @@
     z-index: 15;
 }
 
-.menu_wrapper {
+.menu_wrapper{
     position: fixed;
     right: 0vw;
     bottom: -100vh;
@@ -14,10 +14,14 @@
     height: 100vh;
     padding: 3vh;
     z-index: 10;
-    overflow-y: scroll;
     opacity: 0;
     transition: bottom 0.4s ease, opacity 0.4s ease;
 }
+
+.list_area {
+    height: 70vh;
+    overflow-y: scroll;
+} 
 
 .bg_img {
     z-index: 0;
